New styling + added hero image

--- a/browseevent.html
+++ b/browseevent.html
@@ -19,7 +19,7 @@
   <a href="index.html">Home</a>
   <a href="createevent.html">Create Events</a>
   <a href="browseevent.html" class="active">Browse Events</a>
-  <a href="contactsupport.html">Contact/Support</a>
+  <a href="contactsupport.html">Support</a>
   <a href="yourprofile.html" class="right">Your Profile</a> 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -34,7 +34,7 @@
     <br>
     <!-- The form -->
     <form class="example" action="action_page.php">
-        <input type="text" placeholder="Search.." name="search">
+        <input type="text" placeholder="Search..." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>    
     <br>
