--- a/contactsupport.html
+++ b/contactsupport.html
@@ -19,7 +19,7 @@
   <a href="index.html">Home</a>
   <a href="createevent.html">Create Events</a>
   <a href="browseevent.html">Browse Events</a>
-  <a href="contactsupport.html" class="active">Contact/Support</a>
+  <a href="contactsupport.html" class="active">Support</a>
   <a href="yourprofile.html" class="right">Your Profile</a> 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -40,7 +40,7 @@
                 <section>     
                     <h3>Contact Us</h3>
                     <div class="contactformcontainer">
-                      <form action="/action_page.php">
+                      <form action="https://formspree.io/f/xyybpgyk" method="POST">
                         <div class="contactformrow">
                           <div class="contactformcol-25">
                             <label for="fname">First Name</label>
@@ -73,6 +73,7 @@
                             <textarea id="subject" name="subject" placeholder="Write here!" style="height:200px"></textarea>
                           </div>
                         </div>
+                          <br>
                         <div class="contactformrow">
                           <input type="submit" value="SUBMIT">
                         </div>
