--- a/createevent.html
+++ b/createevent.html
@@ -19,7 +19,7 @@
   <a href="index.html">Home</a>
   <a href="createevent.html" class="active">Create Events</a>
   <a href="browseevent.html">Browse Events</a>
-  <a href="contactsupport.html">Contact/Support</a>
+  <a href="contactsupport.html">Support</a>
   <a href="yourprofile.html" class="right">Your Profile</a> 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
