--- a/yourprofile.html
+++ b/yourprofile.html
@@ -19,7 +19,7 @@
   <a href="index.html">Home</a>
   <a href="createevent.html" >Create Events</a>
   <a href="browseevent.html">Browse Events</a>
-  <a href="contactsupport.html">Contact/Support</a>
+  <a href="contactsupport.html">Support</a>
   <a href="yourprofile.html" class="rightActive">Your Profile</a> 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -29,18 +29,57 @@
     
 <main>
     <h1>Your Profile</h1>
-    <h2>username here | Your Profile (viewing yourself)</h2>
+    <h2>you | you's Profile (viewing yourself)</h2>
 
     <section>
     <div class="profilerow">
         <div class="profilecolumn">
-            <h3>Upcoming Tournaments</h3>
-        </div>
+            <h3>Upcoming Tournaments</h3>         
+                  <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/sideways%20uhh.png alt="Detective Pik-uhh-Chu" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">Detective Pik-uhh-chu</a><p>Game: Smash Ultimate <br>Entrants: 200</p></div>
+                </div> 
+            <br>
+                  <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/2placeholder.png alt="2" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">Placeholder</a><p>Game: Name <br>Entrants: Yes!</p></div>
+                </div>             
+        </div>        
         <div class="profilecolumn">
             <h3>Past Tournaments</h3>
+                 <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/3placeholder.png alt="3" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">Placeholder</a><p>Game: Smash Ultimate <br>Entrants: 200</p></div>
+                </div> 
+            <br>
+                  <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/4placeholder.png alt="4" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">Placeholder</a><p>Game: Name <br>Entrants: Yes!</p></div>
+                </div>                             
         </div> 
         <div class="profilecolumn">
             <h3>Recent Placements</h3>
+                 <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/5placeholder.png alt="5" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">3rd Place @ Placeholder</a><p>Game: Smash Ultimate <br>Entrants: 200</p></div>
+                </div> 
+            <br>
+                  <div class="featuredtournament">
+                    <a target="_blank" href="ultimatetournament.html">
+                      <img src=img/6placeholder.png alt="6" width="1280" height="720">
+                    </a>
+                      <div class="tournamentdesc"><a href="ultimatetournament.html">4th Place @ Placeholder</a><p>Game: Name <br>Entrants: Yes!</p></div>
+                </div>                
         </div>
     </div>
     </section> 
